--- a/cabal-reset.cabal
+++ b/cabal-reset.cabal
@@ -30,4 +30,5 @@ Source-Repository head
 executable Wrath
   main-is:             main.hs
   build-depends:       base >=4.6 && <5
+                     , acme-missiles >= 0.3
                      , process
